[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oomol-cloud-task-sdk"
version = "1.1.0"
description = "Python SDK for Oomol Cloud Task API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "requests>=2.25.0",
    "typing_extensions>=4.0.0; python_version < '3.8'",
]
